--- a/Week1/tanXiangNan/工作记录.md
+++ b/Week1/tanXiangNan/工作记录.md
@@ -17,3 +17,29 @@
 答：只要是内容能够对我有帮助，在页面中显示视频和提供链接让我去学习都可以接受<br>
 10.	如果有一个网站，可以将你所关注的最前沿的知识，以及基于你现在知识体系所需要学习的知识建议推荐给你，你希望它有什么功能？<br>
 答：希望他能够智能测试我目前的知识水平，已经掌握的知识，并根据这个给我推荐最适合我的学习内容。<br>
+
+#--
+
+# FACE 1
+1.年级：大二； <br>
+2. 最近在自学的内容：<br>
+vue javascript；<br>
+3.在自学过程，您是否有或者认为有找不到想要的资料的情况？是怎样解决的？<br>
+答：资料描述不匹配：查更多资料  筛选我需要的（csdn比较多 然后就是百度谷歌）<br>
+4.	在自学过程中，你是否会对学习的依赖相关性产生困惑？<br>
+答：是 学习过程都是碰到问题然后解决 无良好顺序<br>
+5.	在自学过程中，您是否对参考书籍或者参考视频，参考文章感到不知道如何选择？<br>
+答：没有<br>
+6.	在计算机，变化是非常快的，您是否觉得自己有太多太多需要学习的东西，因而会感到茫然？<br>
+答：有 感觉每时每刻都更新新知识<br>
+7.	您是否关注过许多计算机方面的公众号？<br>
+答：有 （感觉没卵用）<br>
+8.	如果您关注过计算机的公众号或者类似的博客，您是否觉得其内容比较杂乱，过于超出你的知识体系，从而晦涩难懂？<br>
+答：感觉公众号知识一般都是介绍 深入解释比较少<br>
+10.	如果有一个网站可以告诉你最适合你目前学习状态的资料、书籍、视频，你希望它以什么样的方式呈现？<br>
+答：网页页面<br>
+10.	如果有一个网站，可以将你所关注的最前沿的知识，以及基于你现在知识体系所需要学习的知识建议推荐给你，你希望它有什么功能？<br>
+答：难度分级 从初学者 到深入了解分区<br>
+11.	如果有一个类似的网站，你对它还有什么建议或者期待吗?<br>
+答：希望出现的推荐内容相关性高，条目相对少一点。<br>
+
